tests/invalid/comparison.err_exp
comparison.m:020: In clause for predicate `test'/2:
comparison.m:020:   in argument 1 of call to predicate `int.<'/2:
comparison.m:020:   type error: variable `A' has type `float',
comparison.m:020:   expected type was `int'.
comparison.m:020: In clause for predicate `test'/2:
comparison.m:020:   in argument 2 of call to predicate `int.<'/2:
comparison.m:020:   type error: variable `B' has type `float',
comparison.m:020:   expected type was `int'.
For more information, recompile with `-E'.
